# tcrad

./: .gitignore  README.md  TODO  configure.ac  configure_ecmwf.sh
include/: Makefile.am  tcrad.inc
src/: Makefile.am  tcrad_adept.cpp  tcrad_adept.hpp  tcrad_config.hpp  tcrad_flux_lw.cpp  tcrad_flux_lw.hpp  tcrad_flux_lw_f90.cpp  tcrad_fortran_interface.cpp  tcrad_fortran_interface.hpp  tcrad_layer_solutions_lw.cpp  tcrad_layer_solutions_lw.hpp  tcrad_overlap.cpp  tcrad_overlap.hpp  tcrad_propagate_radiance_lw.cpp  tcrad_propagate_radiance_lw.hpp  tcrad_radiance_lw.cpp  tcrad_radiance_lw.hpp  tcrad_radiance_lw_ad.cpp  tcrad_radiance_lw_ad.hpp  tcrad_radiance_lw_ad_f90.cpp  tcrad_radiance_lw_f90.cpp  tcrad_radiance_lw_tl.cpp  tcrad_radiance_lw_tl.hpp  tcrad_radiance_lw_tl_f90.cpp  tcrad_radiance_propagation.cpp  tcrad_radiance_propagation.hpp  tcrad_regions.cpp  tcrad_regions.hpp  tcrad_tripleclouds_lw.cpp  tcrad_tripleclouds_lw.hpp  tcrad_two_stream.cpp  tcrad_two_stream.hpp
