lib_LTLIBRARIES = libTCrad.la
libTCrad_la_SOURCES = \
	tcrad_adept.hpp \
	tcrad_fortran_interface.cpp \
	tcrad_fortran_interface.hpp \
	tcrad_overlap.cpp \
	tcrad_overlap.hpp \
	tcrad_regions.cpp \
	tcrad_regions.hpp \
	tcrad_tripleclouds_lw.cpp \
	tcrad_tripleclouds_lw.hpp \
	tcrad_two_stream.cpp \
	tcrad_two_stream.hpp

#	tcrad_adding_ica_lw.cpp \
#	tcrad_adding_ica_lw.hpp \
#	tcrad_config.hpp \
#	tcrad_constants.hpp \
#	tcrad.cpp \
#	tcrad.hpp \
#	tcrad_ecckd.cpp \
#	tcrad_ecckd.hpp



