lib_LTLIBRARIES = libTCrad.la
libTCrad_la_SOURCES = \
	tcrad_adept.cpp \
	tcrad_adept.hpp \
	tcrad_overlap.cpp \
	tcrad_overlap.hpp \
	tcrad_regions.cpp \
	tcrad_regions.hpp \
	tcrad_tripleclouds_lw.cpp \
	tcrad_tripleclouds_lw.hpp \
	tcrad_layer_solutions_lw.cpp \
	tcrad_layer_solutions_lw.hpp \
	tcrad_propagate_radiance_lw.cpp \
	tcrad_propagate_radiance_lw.hpp \
	tcrad_radiance_lw.cpp \
	tcrad_radiance_lw.hpp \
	tcrad_radiance_lw_f90.cpp \
	tcrad_flux_lw.cpp \
	tcrad_flux_lw.hpp \
	tcrad_radiance_lw_tl.cpp \
	tcrad_radiance_lw_tl.hpp \
	tcrad_radiance_lw_ad.cpp \
	tcrad_radiance_lw_ad.hpp \
	tcrad_flux_lw_f90.cpp \
	tcrad_radiance_lw_tl_f90.cpp \
	tcrad_radiance_lw_ad_f90.cpp 	


#	tcrad_adding_ica_lw.cpp \
#	tcrad_adding_ica_lw.hpp \
#	tcrad_config.hpp \
#	tcrad_constants.hpp \
#	tcrad.cpp \
#	tcrad.hpp \
#	tcrad_ecckd.cpp \
#	tcrad_ecckd.hpp



